@@ -1,3 +1,8 @@
+2007-02-01 Jens Tkotz <jens@peino.de> 1.6-RC1-b16
+
+ * Change: PageTitle in photo was then Gallery.
+           Now is <(sub)album title> :: <Image Name>
+
 2007-01-31 Jens Tkotz <jens@peino.de> 1.6-RC1-b15
 
  * Fix: Bug #1305215, enhanced files that are treated as executable
